--- a/app/views/cce_exam_categories/_categories.haml
+++ b/app/views/cce_exam_categories/_categories.haml
@@ -31,4 +31,4 @@
         %td.col-5
           .category-edit
             = link_to_remote "#{t("edit_text")}", :url => { :action => 'edit', :id => c.id },:method=>:get
-            | #{link_to t("delete_text"),c,:method=>:delete,:confirm=>"Delete exam category #{c.name} ?"}
+            = link_to t("delete_text"), c , method: :delete, confirm: "Delete exam category #{c.name} ?"
