--- a/app/views/employee/_list_payslip_category.haml
+++ b/app/views/employee/_list_payslip_category.haml
@@ -24,7 +24,7 @@
         %span :
         = c.amount
       .del-button
-        = link_to image_tag("buttons/delete-new.png", :alt=>'Delete', :border => 0), { :action => "remove_new_paylist_category", :id => c.id, :id3=>CGI::unescape(@salary_date) }, :update => "list-payslip-category", :confirm=>"#{t('delete_confirm_msg')}", :remote => true
+        = link_to image_tag("buttons/delete-new.png", :alt=>'Delete', :border => 0), { :action => "remove_new_paylist_category", :id => c.id, :id3=>CGI::unescape(@salary_date) }, :update => "list-payslip-category", :confirm=>"#{t('delete_confirm_msg')}", :remote => true, method: :DELETE
   - @individual.each do |c|
     %li.new_category
       .name= c.name
@@ -32,4 +32,4 @@
         %span :
         = c.amount
       .del-button
-        = link_to image_tag("buttons/delete-new.png", :alt=>'Delete', :border => 0),  { :action => "remove_new_paylist_category", :id => c.id, :id3 =>CGI::unescape(@salary_date) }, :update => "list-payslip-category", :confirm=>"#{t('delete_confirm_msg')}" , :remote => true
+        = link_to image_tag("buttons/delete-new.png", :alt=>'Delete', :border => 0),  { :action => "remove_new_paylist_category", :id => c.id, :id3 =>CGI::unescape(@salary_date) }, :update => "list-payslip-category", :confirm=>"#{t('delete_confirm_msg')}" , :remote => true, method: :DELETE
