--- a/app/views/class_designations/_class_designations.html.haml
+++ b/app/views/class_designations/_class_designations.html.haml
@@ -28,7 +28,7 @@
           .category-marks= designation.marks
         .category-edit= link_to "#{t('edit_text')}", {:controller=>"class_designations",:action=>"edit_class_designation", :id=>designation.id}, :remote => true  if permitted_to? :edit_class_designation, :class_designations
         .category-delete
-          = link_to "#{t('delete')}", {:controller=>"class_designations",:action=>"delete_class_designation", :id=>designation.id , :remote => true} if permitted_to? :delete_class_designation, :class_designations
+          = link_to t('delete'), { controller: :class_designations, action: :delete_class_designation, id: designation.id, remote: true }, method: :DELETE if permitted_to? :delete_class_designation, :class_designations
 
   - else
     %p.flash-msg
