--- a/app/views/configuration/add_weekly_holidays.html.haml
+++ b/app/views/configuration/add_weekly_holidays.html.haml
@@ -22,4 +22,4 @@
 - unless @weekly_holidays.nil?
   - @weekly_holidays.each do |d|
     = d.config_value
-    = link_to t('delete_text'), :action=>"delete", :id=>d.id
+    = link_to t('delete_text'), :action=>"delete", :id=>d.id, method: :DELETE
