--- a/app/views/courses/_batch_groups.html.haml
+++ b/app/views/courses/_batch_groups.html.haml
@@ -27,6 +27,6 @@
             .category-name= b.batch.name
         .category-edit= link_to "#{t('edit_text')}", {:controller=>"courses",:action=>"edit_batch_group", :id=>batch_group.id} , :remote => true if permitted_to? :edit_batch_group, :courses
         .category-delete
-          = link_to "Delete", {:controller=>"courses",:action=>"delete_batch_group", :id=>batch_group.id}, :confirm=>"Are you sure?" , :remote => true if permitted_to? :delete_batch_group, :courses
+          = link_to "Delete", {:controller=>"courses",:action=>"delete_batch_group", :id=>batch_group.id}, :confirm=>"Are you sure?", method: :DELETE , :remote => true if permitted_to? :delete_batch_group, :courses
   - else
     %p.flash-msg No Grouped Batches found.
