--- a/app/views/employee/_grade.haml
+++ b/app/views/employee/_grade.haml
@@ -26,7 +26,7 @@
           = g.name
           (#{g.priority})
         .grade-edit= link_to "#{t('edit_text')}", :action => "edit_grade", :id=>g.id
-        .grade-edit= link_to "#{t('delete_text')}", {:action => "delete_grade", :id=>g.id}, :confirm => "#{t('delete_confirm_msg')}"
+        .grade-edit= link_to "#{t('delete_text')}", {:action => "delete_grade", :id=>g.id}, :confirm => "#{t('delete_confirm_msg')}", method: :DELETE
     - unless @inactive_grades.empty?
       %li.listheading
         .grade-name= "#{t('inactive_grade')}"
@@ -36,7 +36,7 @@
             = c.name
             (#{c.priority})
           .grade-edit= link_to "#{t('edit_text')}", {:action => "edit_grade", :id=>c.id}
-          .grade-edit= link_to "#{t('delete_text')}", {:action => "delete_grade", :id=>c.id},:confirm=>"#{t('delete_confirm_msg')}"
+          .grade-edit= link_to "#{t('delete_text')}", {:action => "delete_grade", :id=>c.id},:confirm=>"#{t('delete_confirm_msg')}", method: :DELETE
   - else
     %p.flash-msg
       = t('no_employee_grades_record_found')
