--- a/app/views/employee/_select_department.haml
+++ b/app/views/employee/_select_department.haml
@@ -31,7 +31,7 @@
           = @employee.first_name
           = @employee.last_name
           = "(#{EmployeeDepartment.find(@employee.employee_department_id).name})"
-        .remove= link_to "#{t('delete_text')}", {:action => "remove_employee", :id => e.employee_id, :id1=>e.subject_id}, :update => "department-select", :remote => true
+        .remove= link_to "#{t('delete_text')}", {:action => "remove_employee", :id => e.employee_id, :id1=>e.subject_id}, method: :DELETE, :update => "department-select", :remote => true
   - else
     %p.flash-msg= t('no_employee_assigned')
   .label-field-pair
