--- a/app/views/employee/_view_payslip.haml
+++ b/app/views/employee/_view_payslip.haml
@@ -90,7 +90,7 @@
         %span.currency-type1= @monthly_payslips.first.remark
 - if permitted_to? :delete_payslip, :payroll
   .edit-delete-link
-    = link_to "#{t('delete_text')}",{:controller => "employee", :action => "delete_payslip", :id=> @emp.id, :id2=>@salary_date}, :confirm=>"#{t('delete_confirm_msg')}", :class=>"user_button"
+    = link_to "#{t('delete_text')}",{:controller => "employee", :action => "delete_payslip", :id=> @emp.id, :id2=>@salary_date}, :confirm=>"#{t('delete_confirm_msg')}", :class=>"user_button", method: :DELETE
 - if @current_user==@emp.user
   .pdf-link
     = link_to "► #{t('pdf_report')}", {:controller=>"employee", :action=>"individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date}, :target=> "_blank", :class=>"user_button"
