--- a/app/views/employee/profile.haml
+++ b/app/views/employee/profile.haml
@@ -80,7 +80,7 @@
         %li= link_to "#{t('reminder_text')}(#{@new_reminder_count.size})", controller: :reminders, action: :index
     - if @current_user.admin?
       %li
-        = link_to t('delete_text'), action: :remove, id: @employee.id
+        = link_to t('delete_text'), { action: :remove, id: @employee.id}, method: :DELETE
     %li
       %a#link_four.drops{:href => "#"}
         = t('more')
