--- a/app/views/finance/_asset_list.html.haml
+++ b/app/views/finance/_asset_list.html.haml
@@ -31,9 +31,8 @@
           = @currency_type + " "
           = a.amount
         %td.col-1
-          = link_to_remote t('edit_text'), :url => { :action => 'edit_asset', :id => a.id }
-          |
-          \#{link_to_remote t('delete_text'), :url => { :action => 'delete_asset', :id => a.id } ,:confirm=>t('delete_confirm_msg')}
+          = link_to t('edit_text'), { :action => 'edit_asset', :id => a.id }, remote: true
+          = link_to t('delete_text'), { :action => 'delete_asset', :id => a.id } ,:confirm=>t('delete_confirm_msg')}, remote: true, method: :DELETE
     - else
       %tr{:class => "tr-#{cycle('odd', 'even')}"}
         %td.col-3= link_to a.title ,:action=>"each_asset_view",:id => a.id
@@ -42,6 +41,5 @@
           = @currency_type + " "
           = a.amount
         %td.col-1
-          = link_to_remote t('edit_text'), :url => { :action => 'edit_asset', :id => a.id }
-          |
-          \#{link_to_remote t('delete_text'), :url => { :action => 'delete_asset', :id => a.id },:confirm=>t('delete_confirm_msg')}
+          = link_to t('edit_text'), { :action => 'edit_asset', :id => a.id }, remote: true
+          = link_to t('delete_text'), { :action => 'delete_asset', :id => a.id },:confirm=>t('delete_confirm_msg')}, remote: true, method: :DELETE
