--- a/app/views/finance/_fees_particulars_list.html.haml
+++ b/app/views/finance/_fees_particulars_list.html.haml
@@ -51,10 +51,10 @@
         %td.col-3
           - unless @additional_category.check_fee_collection_for_additional_fees == false
             %span.small
-              = link_to_remote t('delete_text'),:confirm=>"#{t('delete_confirm_msg')}", :url => { :action => 'add_particulars_delete',:id => fees.id}
+              = link_to t('delete_text'), { :action => 'add_particulars_delete',:id => fees.id}, method: :DELETE, :confirm=>"#{t('delete_confirm_msg')}"
           - else
             %span.small-strike= t('delete_text')
           %span.small
-            = link_to_remote t('edit_text'), :url => { :action => 'add_particulars_edit',:id => fees.id}
+            = link_to t('edit_text'), { :action => 'add_particulars_edit',:id => fees.id}, remote: true
 - else
   %p.flash-msg= t('no_particulars')
