--- a/app/views/finance/_transaction_triggers_list.html.haml
+++ b/app/views/finance/_transaction_triggers_list.html.haml
@@ -23,4 +23,5 @@
         = trigger.finance_category.name
         \- #{trigger.percentage}
       .category-delete= link_to_remote t('edit_text'),:url=>{:controller=>'finance',:action=>'transaction_trigger_edit',:id=>trigger.id}
-      .category-delete= link_to_remote t('delete_text'),:confirm=>"#{t('delete_confirm_msg')}",:url=>{:controller=>'finance',:action=>'transaction_trigger_delete',:id=>trigger.id}
+      .category-delete
+        = link_to t('delete_text'), {:controller=>'finance',:action=>'transaction_trigger_delete',:id=>trigger.id}, confirm: t('delete_confirm_msg'), method: :DELETE, remote: true
