--- a/app/views/students/admission2.html.haml
+++ b/app/views/students/admission2.html.haml
@@ -40,12 +40,12 @@
             = p.full_name
             \- #{p.relation}
         #add-more-parent
-          = link_to "► #{t('add_another_guardian')}", "#", :class => "user_button", :onclick => "add_another_guardian();"
+          = link_to "► #{t('add_another_guardian')}", "javascript:void(0);", :class => "user_button", :onclick => "add_another_guardian();"
         #skip
-          = link_to "► #{t('finish')}", {:controller => "students", :action => "admission3", :id => @student.id }, :class => "user_button"
+          = link_to "► #{t('finish')}", { controller: :students, action: :admission3, id: @student.id }, class: :user_button
         :javascript
           Event.observe(window, 'load', function() { $('admission1_form').hide(); });
-  = form_for(:guardian, :url => {:id => @student.id}) do |f|
+  = form_for :guardian, url: { id: @student.id} do |f|
     - @guardian.errors.full_messages.each do |msg|
       = msg
     - if @guardian.errors.full_messages.present?
@@ -81,8 +81,8 @@
         %hr.label-underline/
         .label-field-pair
           %label{:for => "parent_detail_dob"}= t("date_of_birth")
-          .text-input-bg= date_select 'guardian[dob]', nil,                              |
-              :start_year => Date.today.year - 60, :readonly=>true, :popup=>"force" |
+          .text-input-bg
+            = text_field_tag 'guardian[dob]', nil, class: 'datepicker'
         %hr.label-underline/
         .label-field-pair
           %label{:for => "parent_detail_education"}= t('education')
@@ -119,7 +119,7 @@
             = t('address_line')
             2
           - unless @student.address_line2.empty?
-            .text-input-bg= f.text_field :office_address_line2,:value=>@student.address_line2
+            .text-input-bg= f.text_field :office_address_line2, :value=>@student.address_line2
           - else
             .text-input-bg= f.text_field :office_address_line2
         %hr.label-underline/
